--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello, world!
+<html>
+  <!-- Hello test -->
+  <head><title>Hello</title></head>
+  <body>
+    Hello, world!
+  </body>
+</html>
+
