--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <!-- Hello test -->
-  <head><title>Hello</title></head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Hello</title>
+  </head>
   <body>
     Hello, world!
+
+    <div id="poi"> </div>
+    <!-- JS -->
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
 
