moved *.js to js/*.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <div id="poi"> </div>
     <!-- JS -->
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
-
